Fixed SCrollbar issue

--- a/style/styles.css
+++ b/style/styles.css
@@ -112,6 +112,8 @@ hr{
     {
         margin: 0rem 1rem;
         text-align: center; 
+        display: flex;
+        justify-content: center;
     }
     .responseTImage
     {
